--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "flask>=3.1.2",
+    "httpx[socks]>=0.28.1",
     "insightface>=0.7.3",
     "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
